<resources>
    <string name="app_name">Cantina_IFPR</string>

    <string name="title">Cantina do IFPR Colombo </string>
    <string name="drinks_label">Bebidas</string>
    <string name="food_label">Comida</string>

    <string name="total_label">Total: R$</string>
    <string name="total_default_value">0,00</string>

    <string name="coxinha">R$6,00 - Coxinha de Frango com Catupiry</string>
    <string name="doguinho">R$2,00 - Doguinho</string>
    <string name="bigBurger">R$5,00 - Hamburgão</string>
    <string name="paoDeQueijo">R$6,00 - Pão de Queijo Recheado </string>

    <string name="coca200">R$3,00 - Coca Cola 200ml</string>
    <string name="coca1l">R$8,00 - Coca Cola 1L</string>
    <string name="cafe25">R$2,50 - Café Puro 25ml</string>
    <string name="cafe50">R$7,50 - Café Gelado 200ml</string>

    <string name="frete">Frete</string>
    <string name="frete_option_retirar">Retirar</string>
    <string name="frete_option_entrega">Entrega (R$20,00)</string>
</resources>
